TestSuite/errors/err0289.pas
type A = static static class
end;

begin
end.